# vim: set noexpandtab:

2013-05-19 Steve
	* Added container taus to SusyD3PDAna
		* Functionality copied over from SusyCommon-00-00-68-branch
	* Added m_saveContTaus flag to SusyNtMaker for toggling usage of
	  container taus to fill the SusyNt rather than preTaus
	* Added new filtering options to SusyNtMaker
		* m_nLepFilter specifies minimum light leptons to save event
		* m_nLepTauFilter specifies minimum leptons to save event
		* m_filterTrigger toggles trigger filtering, using all triggers
		  saved in the event trigger flags

2013-05-02 Steve
	* Lowered the pre-lepton pt cuts to 6 GeV
		* metMuons still used for the met with pt>10
		* This impacts the code's usefulness for d3pd analysis,
		  so I will try to add functionality to keep using 10 GeV
		  for baseline and signal object level
	* Tagging SusyCommon-00-00-70

2013-05-02 Steve
	* Tagging SusyCommon-00-00-69

2013-05-01 Steve
	* Added flag to SusyD3PDAna for toggling the MET jet-ele overlap fix
	* Extended baseline muon eta cut up to 2.5
	* Removed useMetMuons flag which is redundant after extending muon eta cut
	* Cleaned up some unused commented-out code
	* Moved Sherpa WW radiative b-quark fix methods to SusyD3PDAna
	* Removed cell out and soft jet term checks in SusyMetValdation
	* Replaced filling of met.softJet and met.refCell with met.softTerm in SusyNtMaker

2013-04-17 Steve
	* Changed default MET to Default in NtMaker
	* Minor code cleanup

2013-04-07 Steve
	* Merge with SusyCommon-00-00-66-branch
		* I was accidentally committing changes to this rather than trunk. Oops
	* Updated full dataset pileup file to 
	  $ROOTCOREDIR/data/MultiLep/ilumicalc_histograms_EF_2e12Tvh_loose1_200842-215643_v2.root
	* Changed HforToolD3PD setting to ALL
	* Tile trip cleaning cut functionality
		* Added passTileTrip method
		* Added tile trip cut to the SusyNtMaker cutflow
			* Ntuples are filtered on this cut. 
			  Do we need to be able to turn it off??
	* Tagging SusyCommon-00-00-68

2013-04-04 Matt